Add transition to the photos.

--- a/ynion_mabeamae/style.css
+++ b/ynion_mabeamae/style.css
@@ -143,9 +143,16 @@ p {
   margin: 0px;
   padding: 1vw;
   gap: 2rem;
+  object-fit: cover;
+  transition: 0.2s ease-in-out;
+  cursor: pointer;
   border: 2px solid lightblue;
   border-radius: 10px;
   margin-bottom: 2rem;
+}
+
+.photos img:hover {
+  transform: scale(1.1);
 }
 
 .container {
