--- a/style.css
+++ b/style.css
@@ -3,7 +3,17 @@ body {
   padding: 0;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  background-color: #9AA6B2;
+  /*background-color: #9AA6B2;*/
+  background-image: url(dino.gif);
+  background-position: left center;
+  background-size: 150%;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 h1 {
